# camnet

./: .gitignore  CamNet_Users_Guidebook.docx  README.md  USERS_GUIDE.md  camnet.antigravity.json  desktop.ini  implementation_plan.md  linux_setup.sh  pyproject.toml  task.md  walkthrough.md
driver/: CMakeLists.txt  README.md
driver/src/: camnet_vcam.cpp  camnet_vcam.h  dllmain.cpp
driver_installer/: install.py  uninstall.py
knowledge/: summary.md
receiver/: __init__.py  controller.py  discovery.py  ingest.py  main.py  platform_shm.py  requirements.txt  requirements_linux.txt  shm_writer.py  v4l2_output.py
sender/: __init__.py  capture.py  discovery.py  encoder.py  main.py  requirements.txt  streamer.py
sender/web/: index.html  sender.js
tests/: __init__.py  conftest.py  test_discovery.py  test_latency.py  test_shm.py
