[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camnet"
version = "1.0.0"
description = "Stream any network camera into OBS Studio as a native DirectShow Video Capture Device"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CamNet Contributors"},
]
keywords = ["obs", "directshow", "virtual-camera", "srt", "webrtc", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
]

[project.optional-dependencies]
sender = [
    "opencv-python>=4.9.0",
    "zeroconf>=0.132.2",
    "pystray>=0.19.5",
    "Pillow>=10.3.0",
    "aiortc>=1.9.0",
    "aiohttp>=3.9.5",
    "ffmpeg-python>=0.2.0",
    "pyaudio>=0.2.14",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "psutil>=5.9.8",
]
receiver = [
    "zeroconf>=0.132.2",
    "ffmpeg-python>=0.2.0",
    "pystray>=0.19.5",
    "Pillow>=10.3.0",
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
    "pywin32>=306",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "psutil>=5.9.8",
    "requests>=2.32.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
camnet-sender = "sender.main:cli"
camnet-receiver = "receiver.main:cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
